# py-gadgets

./: .gitignore  LICENSE  pyproject.toml  quickscope.py  readme.md
.github/workflows/: ci.yml
src/py_gadgets/: __init__.py  cli.py
src/py_gadgets/tools/: __init__.py  bigfiles.py  dupes.py  quickscope.py
tests/: test_bigfiles.py  test_dupes.py  test_quickscope.py
