[project]
name = "py-gadgets"
version = "0.2.0"
description = "Security & networking gadgets by APonder.dev"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name="Anthony Ponder", email="anthony@aponder.dev" }]
dependencies = []

[project.scripts]
pygadgets = "py_gadgets.cli:main"
quickscope = "py_gadgets.tools.quickscope:main"
bigfiles   = "py_gadgets.tools.bigfiles:main"
dupes      = "py_gadgets.tools.dupes:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
